--- a/MineralThicknessMS/MineralThicknessMS.csproj
+++ b/MineralThicknessMS/MineralThicknessMS.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="OxyPlot.WindowsForms" Version="2.1.2" />
     <PackageReference Include="STTech.BytesIO.Core" Version="2.12.9" />
     <PackageReference Include="STTech.BytesIO.Tcp" Version="2.12.9" />
+    <PackageReference Include="WinForms.DataVisualization" Version="1.8.0" />
     <PackageReference Include="XPlot.GoogleCharts" Version="3.0.1" />
   </ItemGroup>
 
