--- a/MineralThicknessMS/MineralThicknessMS.csproj
+++ b/MineralThicknessMS/MineralThicknessMS.csproj
@@ -7,14 +7,15 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
-  <ItemGroup>
+	<ItemGroup>
     <PackageReference Include="EPPlus" Version="6.2.6" />
     <PackageReference Include="GMap.NET.Core" Version="2.1.7" />
     <PackageReference Include="GMap.NET.WinForms" Version="2.1.7" />
     <PackageReference Include="MySql.Data" Version="8.0.33" />
     <PackageReference Include="STTech.BytesIO.Core" Version="2.12.9" />
+    <PackageReference Include="STTech.BytesIO.Serial" Version="2.12.9" />
     <PackageReference Include="STTech.BytesIO.Tcp" Version="2.12.9" />
+    <PackageReference Include="System.Management" Version="8.0.0-preview.6.23329.7" />
     <PackageReference Include="WinForms.DataVisualization" Version="1.8.0" />
   </ItemGroup>
 
@@ -23,6 +24,11 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -35,6 +41,13 @@
 
   <ItemGroup>
     <Folder Include="resource\images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>PublicSettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
